2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-10-10  Andreas Kupries  <andreask@activestate.com>

	* string.man: Renamed to textutil_string.man. Avoid clash with core.
	* split.man:  Renamed to textutil_split.man. Avoid clash with core.
	  Fix [Bug 2124508].

2008-06-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* textutil_adjust.pcx: New file. Syntax definitions for the public
	* textutil_repeat.pcx: commands of the textutil packages.
	* textutil_split.pcx:
	* textutil_string.pcx:
	* textutil_tabify.pcx:
	* textutil_trim.pcx:

2008-03-22  Michael Schlenker <mic42@users.sourceforge.net>

        * string.tcl:   Faster longestCommonPrefixList proc
	* string.bench: Bench file for ::textutil::string package
	* string.man: 
        * pkgIndex.tcl: subpackage version to 0.7.1

2008-03-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* adjust.man: Added documentation for the packages the
	* repeat.man: textutil bundle consists of.
	* split.man:
	* string.man:
	* tabify.man:
	* trim.man:
	* textutil.man: Noted that the bundle package is now deprecated
	  and will go away in the future.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* textutil.man: Fixed all warnings due to use of now deprecated
	* expander.man: commands. Added a section about how to give feedback.
